--- a/FrontEnd/pages/Author.html
+++ b/FrontEnd/pages/Author.html
@@ -118,7 +118,7 @@
             <a href=""><b> autore</b></a>
         </div>
 
-        <div id="pageContainer" >
+        <div class="pageContainer" >
 
             <div class="row ">
                 <div class="col-4">
