--- a/FrontEnd/pages/Book.html
+++ b/FrontEnd/pages/Book.html
@@ -117,7 +117,7 @@
             <a href=""><b> Libro</b></a>
         </div>
 
-        <div id="pageContainer" >
+        <div class="pageContainer" >
 
             <div class="row bookD">
                 <div  class="col-4">
