--- a/FrontEnd/pages/BooksList.html
+++ b/FrontEnd/pages/BooksList.html
@@ -22,8 +22,11 @@
 
         <script src="../assets/js/main.js"></script>
     </head>
+    
+    <script> 
+    </script>
 
-    <body>
+    <body onload="booksList()">
         <!--upper navbar-->
         <div class="container-fluid ">
             <div class="upper-nav navbar">
@@ -117,7 +120,7 @@
 
         </div>
 
-        <div id="pageContainer" >
+        <div class="pageContainer" >
 
             <div class="row ">
 
