--- a/FrontEnd/pages/EventsList.html
+++ b/FrontEnd/pages/EventsList.html
@@ -23,7 +23,7 @@
         <script src="../assets/js/main.js"></script>
     </head>
 
-    <body>
+    <body onload="eventsList()">
         <!--upper navbar-->
         <div class="container-fluid ">
             <div class="upper-nav navbar">
@@ -116,7 +116,7 @@
 
         </div>
 
-        <div id="pageContainer" >
+        <div class="pageContainer" >
 
             <div class="row">
                 <div class="col-3 bookFilters">
