--- a/FrontEnd/pages/GenresList.html
+++ b/FrontEnd/pages/GenresList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Nome autore</title>
+        <title>Genres List</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Montserrat&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
         <script src="../assets/js/main.js"></script>
     </head>
 
-    <body>
+    <body onload="genList()">
         <!--upper navbar-->
         <div class="container-fluid ">
             <div class="upper-nav navbar">
@@ -117,7 +117,7 @@
             
         </div>
 
-        <div id="pageContainer" >
+        <div class="pageContainer" >
 
             <div id="genres" class="row ">
             
