Add AJAX for logOut, signUp and LogIn

--- a/FrontEnd/pages/Log_In.html
+++ b/FrontEnd/pages/Log_In.html
@@ -21,7 +21,7 @@
             <h5 class="card-title text-center">Log in</h5>
             <form class="form-signin">
               <div class="form-label-group">
-                <input type="text" id="logInUsername" class="form-control" placeholder="Username" required>
+                <input type="text" id="logInUsername" class="form-control" placeholder="Username" required autofocus>
               </div>
 
               <div class="form-label-group">
