--- a/FrontEnd/pages/Sign_Up.html
+++ b/FrontEnd/pages/Sign_Up.html
@@ -22,7 +22,7 @@
             <form class="form-signin">
 
               <div class="form-label-group">
-                <input type="text" id="signUpEmail" class="form-control" placeholder="Email" required autofocus>
+                <input type="email" id="signUpEmail" class="form-control" placeholder="Email" required autofocus>
               </div>
 
               <div class="form-label-group">
