--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -149,23 +149,23 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-lg-4 col-md-4 col-sm-12 ">
       <div id="bestSellerContainer">
-        <p id="bestSellerContainerTitle">Best Seller</p>
+        <p id="homeTitles">BEST SELLERS</p>
 
       </div>
     </div>
 
-    <div class="col-8">
+    <div class="col-lg-8 col-md-8 col-sm-12">
       <div id="ourFavouriteContainer">
-        <p id="ourFavouriteTitle">Our Favourite</p>
+        <p id="homeTitles">OUR FAVOURITES</p>
         <div class="row">
-          <div id="leftOurFavourite" class="col">
+          <div id="leftOurFavourite" class="col-lg-6 col-md-6 col-sm-12">
 
           </div>
 
 
-          <div id="rightOurFavourite" class="col">
+          <div id="rightOurFavourite" class="col-lg-6 col-md-6 col-sm-12">
 
           </div>
         </div>
