--- a/FrontEnd/pages/AuthorsList.html
+++ b/FrontEnd/pages/AuthorsList.html
@@ -117,7 +117,7 @@
             
         </div>
 
-        <div id="pageContainer" >
+        <div class="pageContainer" >
 
             <div id="genres" class="row ">
             
