--- a/FrontEnd/pages/EventsList.html
+++ b/FrontEnd/pages/EventsList.html
@@ -33,22 +33,7 @@
                 <div class="col-6"><form class="header-search-form" action="">
 
 
-                    <!--div class="input-group mb-3">
-<div class="input-group-prepend">
-<button type="button" class="btn btn-outline-secondary">Action</button>
-<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-<span class="sr-only">Toggle Dropdown</span>
-</button>
-<div class="dropdown-menu">
-<a class="dropdown-item" href="#">Action</a>
-<a class="dropdown-item" href="#">Another action</a>
-<a class="dropdown-item" href="#">Something else here</a>
-<div role="separator" class="dropdown-divider"></div>
-<a class="dropdown-item" href="#">Separated link</a>
-</div>
-</div>
-<input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
-</div-->
+                   
                     <input  type="text" placeholder="Search for books, events and authors">
                     <button class="btn btn-outline-success my-2 my-sm-0  " type="submit"><i class="flaticon-search"></i></button>      
                     </form></div>
@@ -119,14 +104,14 @@
         <div class="pageContainer" >
 
             <div class="row">
-                <div class="col-3 bookFilters">
+                <div class="col-lg-3  col-12 bookFilters">
                    <h6><b>FILTER BY</b></h6>
                     <div> <a href=""> All events</a></div>
                     <div class="selected"><a href="">Events of the month</a> </div>
                     <div><a href="">More option...</a></div>
                 </div>
 
-                <div id="events" class="col-9"> 
+                <div id="events" class="col-lg-9 col-12"> 
 
                     <!--div class="event">
 
