Add Cart and logIn AJAX

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,7 +54,7 @@
 
   <div class="cart" >
 
-    <a class="nav-link" href="pages/Log_In.html"><i class="flaticon-shopping-cart"></i>
+    <a id="mimicchio" class="nav-link" href="pages/Cart.html"><i class="flaticon-shopping-cart"></i>
     </a> <span>0</span>
   </div>
   <!--/div-->
