--- a/FrontEnd/pages/Cart.html
+++ b/FrontEnd/pages/Cart.html
@@ -19,6 +19,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="../assets/js/main.js"></script>
+
 </head>
 
 <body>
@@ -120,15 +122,6 @@
   </div>
   <div class="row">
     <div id="cartList" class="col-8">
-      <div class="cartItem">
-        <img src="../assets/img/fotoHP.jpg" alt="">
-        <span class="cartItemInfo">
-          <a class="cartItemTitle" href="">Harry Potter e la Camera dei Segreti</a> by <a class="cartItemAuthor" href="">J.K.Rowling</a>
-          <p class="cartItemPrice">EUR 50,43</p>
-          <a class="cartItemRemove" href="#">remove</a>
-        </span>
-        <hr>
-      </div>
 
 
     </div>
