--- a/FrontEnd/pages/Sign_Up.html
+++ b/FrontEnd/pages/Sign_Up.html
@@ -33,7 +33,7 @@
                 <input type="password" id="signUpPassword" class="form-control" placeholder="Password" required>
               </div>
 
-              <button id="signUpButton" class="btn btn-lg btn-primary btn-block text-uppercase funny_color" type="submit">Sign Up</button>
+              <button id="signUpButton" class="btn btn-lg btn-primary btn-block text-uppercase funny_color" type="button">Sign Up</button>
             </form>
             <hr>
       </div>
