Category img added

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -109,10 +109,10 @@
 <!--___________END NAVBAR_____________-->
 
 <!--Book, Author, Event-->
-<div class="container">
+<div class="containerTop">
   <div class="row">
 
-    <div id="bookLink" class="col">
+    <div id="bookLink" class="col-lg-4 col-md-4 col-sm-12">
       <div class="Link">
         <a href="pages/BooksList.html">Book</a>
       </div>
@@ -120,25 +120,25 @@
         <a href="pages/GenresList.html">Genres</a>
       </div>
       <div class="Link">
-        <a href="pages/allThemes.html">Themes</a>
+        <a href="pages/themesList.html">Themes</a>
       </div>
     </div>
 
 
-    <div id="writerLink" class="col">
+    <div id="writerLink" class="col-lg-4 col-md-4 col-sm-12">
       <div class="Link"></div>
       <div class="Link">
-        <a id="logOutButton" href="">Authors</a>
+        
       </div>
-      <div class="Link"></div>
+      <div class="Link"><a href="pages/EventsList.html">Authors</a></div>
     </div>
 
-    <div id="eventLink" class="col">
+    <div id="eventLink" class="col-lg-4 col-md-4 col-sm-12">
       <div class="Link"></div>
       <div class="Link">
-        <a href="pages/EventsList.html">Events</a>
+        
       </div>
-      <div class="Link"></div>
+      <div class="Link"><a href="pages/EventsList.html">Events</a></div>
     </div>
 
   </div>
@@ -147,7 +147,7 @@
 
 <!--BestSeller, ourFavourite-->
 
-<div class="container">
+<div class="pageContainer">
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12 ">
       <div id="bestSellerContainer">
