--- a/FrontEnd/pages/Author.html
+++ b/FrontEnd/pages/Author.html
@@ -34,22 +34,7 @@
                 <div class="col-6"><form class="header-search-form" action="">
 
 
-                    <!--div class="input-group mb-3">
-<div class="input-group-prepend">
-<button type="button" class="btn btn-outline-secondary">Action</button>
-<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-<span class="sr-only">Toggle Dropdown</span>
-</button>
-<div class="dropdown-menu">
-<a class="dropdown-item" href="#">Action</a>
-<a class="dropdown-item" href="#">Another action</a>
-<a class="dropdown-item" href="#">Something else here</a>
-<div role="separator" class="dropdown-divider"></div>
-<a class="dropdown-item" href="#">Separated link</a>
-</div>
-</div>
-<input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
-</div-->
+                   
                     <input  type="text" placeholder="Search for books, events and authors">
                     <button class="btn btn-outline-success my-2 my-sm-0  " type="submit"><i class="flaticon-search"></i></button>      
                     </form></div>
@@ -114,8 +99,8 @@
         <!--end navbar-->
 
         <div class="breads">
-            <a href=""><b>Authors </b></a>/
-            <a href=""><b> autore</b></a>
+            <a class="rootB" href=""><b>Authors </b></a>/
+            
         </div>
 
         <div class="pageContainer" >
