--- a/FrontEnd/pages/ContactUs.html
+++ b/FrontEnd/pages/ContactUs.html
@@ -30,23 +30,6 @@
       <div class="col-3"><h2>Titolo e Logo del  sito</h2></div>
       <div class="col-6"><form class="header-search-form" action="">
 
-
-        <!--div class="input-group mb-3">
-        <div class="input-group-prepend">
-        <button type="button" class="btn btn-outline-secondary">Action</button>
-        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span class="sr-only">Toggle Dropdown</span>
-      </button>
-      <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <div role="separator" class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
-    </div>
-  </div>
-  <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
-</div-->
 <input  type="text" placeholder="Search for books, events and authors">
 <button class="btn btn-outline-success my-2 my-sm-0  " type="submit"><i class="flaticon-search"></i></button>
 </form></div>
@@ -114,7 +97,7 @@
   <a href=""><b>Contact Us </b></a>
 </div>
 
-<div class="ContactUsText container">
+<div class="ContactUsText pageContainer">
   <h5 class="text">If you need information or clarifications about our services, do not hesitate, write to our customer service. We will respond effectively to your requests as quickly as possible. Fill in the fields below and send us your message. </h5>
   <br>
   <!--Contact Us Form-->
@@ -139,9 +122,9 @@
     </div>
   </div>
   <!--END Contact Us Form-->
-  <div class="container">
-    <p>Otherwise contact us at this phone number:  3337684526</p>
-        <p class="text">The cost of calls from a landline phone, without charges, is: <br> - € 0.1450 per minute VAT included from Monday to Friday from 8.00 to 18.30 and Saturday from 8.00 to 13.00 <br> - € 0, 0570 per minute VAT included from Monday to Friday from 6.30pm to 8.00am, Saturday from 1.00pm to 8.00am and public holidays. <br> <br> The maximum cost of calls from a mobile network is: <br> - € 0, 4270 per minute with a connection fee of € 0.1580.</p>
+  <div>
+    <h6>Otherwise contact us at this phone number:  3337684526</h6>
+        
   </div>
 </div>
 
