--- a/FrontEnd/pages/Event.html
+++ b/FrontEnd/pages/Event.html
@@ -105,7 +105,7 @@
         <!--end navbar-->
 
         <div id="breads" class="breads">
-            <a href="EventsList.html"><b>Events</b></a> /
+            <a class="rootB" href="EventsList.html"><b>Events</b></a> /
 
         </div>
 
