Added AJAX for /cart/items , fixed logIn and logOut AJAX

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        
+
 
         <!--mia upper navbar-->
 
@@ -37,7 +37,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
                     <div class=" nav-item col-lg-8 col-md-7 col-sm-12">
-                        
+
                         <form class="header-search-form form-inline my-2 my-lg-0" action="">
 
                         <input  class="form-control mr-lg-6" type="search" placeholder="Search for books, events and authors">
@@ -45,8 +45,7 @@
                         </form>
                         </div>
 
-                    <div >
-
+                        <div class="row">
                         <a class="nav-link aaa " href="pages/Log_In.html"><i class="flaticon-user"></i>Log In</a>
 
                         <div class="cart" >
@@ -55,7 +54,7 @@
                             </a> <p>0</p>
                         </div>
                         <!--/div-->
-
+                        <a id="ciao" href="#" onclick="logIn()">ahha</a>
                     </div>
 
                 </div>
