--- a/FrontEnd/pages/Log_In.html
+++ b/FrontEnd/pages/Log_In.html
@@ -28,7 +28,7 @@
                 <input type="password" id="logInPassword" class="form-control" placeholder="Password" required>
               </div>
 
-              <button id="logInButton" class="btn btn-lg btn-primary btn-block text-uppercase funny_color" type="button">Log In</button>
+              <button id="logInButton" class="btn btn-lg btn-primary btn-block text-uppercase funny_color" type="button" onclick="logIn()">Log In</button>
             </form>
             <hr>
           </div>
