--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -47,7 +47,7 @@
 
                     <div >
 
-                        <a class="nav-link aaa " href="pages/Log_In.html"><i class="flaticon-user"></i>Log In</a>
+                        <a id="logInOut" class="nav-link aaa " href="pages/Log_In.html"><i class="flaticon-user"></i>Log In</a>
 
                         <div class="cart" >
 
