Fix Link in All Pages

--- a/FrontEnd/pages/ContactUs.html
+++ b/FrontEnd/pages/ContactUs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Nome autore</title>
+  <title>Contact Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Montserrat&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
     <div class="upper-nav navbar">
       <!--div class="container"-->
 
-      <div class="col-3"><h2>Titolo e Logo del  sito</h2></div>
+      <div class="col-3"><a href="../index.html"><h2>Titolo e Logo del  sito</h2></a></div>
       <div class="col-6"><form class="header-search-form" action="">
 
 <input  type="text" placeholder="Search for books, events and authors">
@@ -36,11 +36,11 @@
 
 <div class="col-3">
 
-  <a class="nav-link " href="pages/Log_In.html"><i class="flaticon-user"></i>Log In</a>
+  <a class="nav-link " href="Log_In.html"><i class="flaticon-user"></i>Log In</a>
 
   <div class="cart" >
 
-    <a class="nav-link" href="pages/Log_In.html"><i class="flaticon-shopping-cart"></i>
+    <a class="nav-link" href="Cart.html"><i class="flaticon-shopping-cart"></i>
     </a> <span>0</span>
   </div>
   <!--/div-->
@@ -62,7 +62,7 @@
   <div class="collapse navbar-collapse" id="navbarsCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link nav_text_color" href="#">Home</a>
+        <a class="nav-link nav_text_color" href="../index.html">Home</a>
       </li>
 
       <li class="nav-item">
@@ -71,18 +71,16 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle nav_text_color" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
         <div class="dropdown-menu" aria-labelledby="dropdown03">
-          <a class="dropdown-item" href="#">Themes</a>
-          <a class="dropdown-item" href="#">Genres</a>
+          <a class="dropdown-item" href="BooksList.html">All Books</a>
+          <a class="dropdown-item" href="themesList.html">Themes</a>
+          <a class="dropdown-item" href="GenresList.html">Genres</a>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav_text_color" href="#">Authors</a>
+        <a class="nav-link nav_text_color" href="AuthorsList.html">Authors</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav_text_color" href="#">Events</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link nav_text_color" href="#">Contact Us</a>
+        <a class="nav-link nav_text_color" href="EventsList.html">Events</a>
       </li>
     </ul>
 
@@ -124,7 +122,7 @@
   <!--END Contact Us Form-->
   <div>
     <h6>Otherwise contact us at this phone number:  3337684526</h6>
-        
+
   </div>
 </div>
 
