--- a/FrontEnd/pages/Cart.html
+++ b/FrontEnd/pages/Cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Nome autore</title>
+  <title>Cart</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Montserrat&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
     <div class="upper-nav navbar">
       <!--div class="container"-->
 
-      <div class="col-3"><h2>Titolo e Logo del  sito</h2></div>
+      <div class="col-3"><a href="../index.html"><h2>Titolo e Logo del  sito</h2></a></div>
       <div class="col-6"><form class="header-search-form" action="">
 
 
@@ -55,11 +55,11 @@
 
 <div class="col-3">
 
-  <a class="nav-link " href="pages/Log_In.html"><i class="flaticon-user"></i>Log In</a>
+  <a class="nav-link " href="Log_In.html"><i class="flaticon-user"></i>Log In</a>
 
   <div class="cart" >
 
-    <a class="nav-link" href="pages/Log_In.html"><i class="flaticon-shopping-cart"></i>
+    <a class="nav-link" href="Cart.html"><i class="flaticon-shopping-cart"></i>
     </a> <span>0</span>
   </div>
   <!--/div-->
@@ -81,27 +81,25 @@
   <div class="collapse navbar-collapse" id="navbarsCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link nav_text_color" href="#">Home</a>
+        <a class="nav-link nav_text_color" href="../index.html">Home</a>
       </li>
 
       <li class="nav-item">
         <a href="#"><i class="fas fa-cart-plus"></i></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle nav_text_color" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
+        <a class="nav-link dropdown-toggle nav_text_color" href="BooksList.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
         <div class="dropdown-menu" aria-labelledby="dropdown03">
-          <a class="dropdown-item" href="#">Themes</a>
-          <a class="dropdown-item" href="#">Genres</a>
+          <a class="dropdown-item" href="BooksList.html">All Books</a>
+          <a class="dropdown-item" href="themesList.html">Themes</a>
+          <a class="dropdown-item" href="GenresList.html#">Genres</a>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav_text_color" href="#">Authors</a>
+        <a class="nav-link nav_text_color" href="AuthorsList.html">Authors</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav_text_color" href="#">Events</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link nav_text_color" href="#">Contact Us</a>
+        <a class="nav-link nav_text_color" href="EventsList.html">Events</a>
       </li>
     </ul>
 
