--- a/FrontEnd/pages/EventsList.html
+++ b/FrontEnd/pages/EventsList.html
@@ -113,7 +113,7 @@
             <div class="row">
                 <div class="col-lg-3  col-12 bookFilters">
                    <h6><b>FILTER BY</b></h6>
-                    <div id="evfall" class="selected"> <a onclick="eventsList('all')"> All events</a></div>
+                    <div id="evfall" class="selected"> <a onclick="eventsList()"> All events</a></div>
                     
                     <div id="evfmon"><a onclick="eventsThisMonth()">Events of the month</a> </div>
                     
