--- a/FrontEnd/pages/Book.html
+++ b/FrontEnd/pages/Book.html
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-                <div id="semantic" class="col-lg-4 col-md-6 col-sm-12"> 
+                <div id="semantic" class="col-lg-4 col-md-6 col-sm-12">
                     <a id="semAut"> Discover the author </a>
                 </div>
 
@@ -199,6 +199,15 @@
 
 
 
+        <!--___________END BestSeller, ourFavourite_____________-->
+        <!--Footer-->
 
+        <footer>
+          <a href="pages/ContactUs.html">Contact Us</a>
+          <a href="pages/ContactUs.html">Shipping Info</a>
+          <a href="">Cookies</a>
+          <a href="">Privacy</a>
+        </footer>
+        <!--___________END Footer_____________-->
     </body>
 </html>
