--- a/FrontEnd/pages/AuthorsList.html
+++ b/FrontEnd/pages/AuthorsList.html
@@ -77,7 +77,7 @@
                 </button>
                 <div class="navEl">
                     <ul class="navbar-nav mr-auto">
-                        
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle nav_text_color" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown03">
@@ -123,6 +123,15 @@
 
 
 
+        <!--___________END BestSeller, ourFavourite_____________-->
+        <!--Footer-->
 
+        <footer>
+          <a href="pages/ContactUs.html">Contact Us</a>
+          <a href="pages/ContactUs.html">Shipping Info</a>
+          <a href="">Cookies</a>
+          <a href="">Privacy</a>
+        </footer>
+        <!--___________END Footer_____________-->
     </body>
 </html>
