--- a/FrontEnd/pages/Cart.html
+++ b/FrontEnd/pages/Cart.html
@@ -137,6 +137,15 @@
 
 
 
+<!--___________END BestSeller, ourFavourite_____________-->
+<!--Footer-->
 
+<footer>
+  <a href="pages/ContactUs.html">Contact Us</a>
+  <a href="pages/ContactUs.html">Shipping Info</a>
+  <a href="">Cookies</a>
+  <a href="">Privacy</a>
+</footer>
+<!--___________END Footer_____________-->
 </body>
 </html>
