--- a/FrontEnd/pages/Event.html
+++ b/FrontEnd/pages/Event.html
@@ -81,10 +81,10 @@
 
                 <!--div class="container"-->
 
-                
+
                 <div class="navEl">
                     <ul class="navbar-nav mr-auto">
-                        
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle nav_text_color" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown03">
@@ -151,6 +151,15 @@
 
 
         </div>
+        <!--___________END BestSeller, ourFavourite_____________-->
+        <!--Footer-->
 
+        <footer>
+          <a href="pages/ContactUs.html">Contact Us</a>
+          <a href="pages/ContactUs.html">Shipping Info</a>
+          <a href="">Cookies</a>
+          <a href="">Privacy</a>
+        </footer>
+        <!--___________END Footer_____________-->
     </body>
 </html>
