--- a/FrontEnd/pages/Sign_Up.html
+++ b/FrontEnd/pages/Sign_Up.html
@@ -39,4 +39,14 @@
       </div>
     </div>
   </div>
+  <!--___________END BestSeller, ourFavourite_____________-->
+  <!--Footer-->
+
+  <footer>
+    <a href="pages/ContactUs.html">Contact Us</a>
+    <a href="pages/ContactUs.html">Shipping Info</a>
+    <a href="">Cookies</a>
+    <a href="">Privacy</a>
+  </footer>
+  <!--___________END Footer_____________-->
 </body>
