--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -39,9 +39,9 @@
         <div class=" nav-item col-lg-8 col-md-7 col-sm-12">
 
           <form class="header-search-form form-inline my-2 my-lg-0" action="">
-
-            <input  class="form-control mr-lg-6" type="search" placeholder="Search for books, events and authors">
-            <button class="btn btn-outline-success my-2 my-sm-0  " type="submit"><i class="flaticon-search"></i></button>
+            <label for="bar">Search</label>
+            <input  id="bar" class="form-control mr-lg-6" type="search" placeholder="Search for books, events and authors">
+            <button class="btn btn-outline-success my-2 my-sm-0  " type="submit" >Search<i class="flaticon-search"></i></button>
           </form>
         </div>
 
@@ -143,7 +143,7 @@
 
 <footer>
   <a href="pages/ContactUs.html">Contact Us</a>
-  <a href="pages/ContactUs.html">Shipping Info</a>
+  <a href="pages/ShippingInfo.html">Shipping Info</a>
   <a href="">Cookies</a>
   <a href="">Privacy</a>
 </footer>
