--- a/FrontEnd/pages/main.html
+++ b/FrontEnd/pages/main.html
@@ -36,8 +36,8 @@
 <td>member</td>
 <td>Cristina</td>
 <td>Sambinelli</td>
-<td>non la so</td>
-<td>non la so</td>
+<td>896447</td>
+<td>cristina.sambinelli@mail.polimi.it</td>
 </tr>
 </tbody>
 </table>
@@ -93,7 +93,7 @@ Obviously, a client can perform only one session per time, that is if a POST req
 <ul>
     <li>Matteo developed the back-end almost the whole time, wrote the OpenAPI Spec and deployed the application on the remote platform</li>
     <li>Francesco worked on...</li>
-    <li>Cristina worked on...</li>
+    <li>Cristina worked in the back-end, front-end and design part. She realized the Interactive Dialogue Models, ER model for the Design, created the structure of the of the database for the back-end part, and also worked on the front-end realizing part of the pages and functions of the wbsite.</li>
 </ul>
 <p>All the members of the team worked on the specification of the OpenAPI giving support and ideas for the implementation</p>
 <h3 id="analysis-of-existing-api">Analysis of existing API</h3>
@@ -103,5 +103,6 @@ Obviously, a client can perform only one session per time, that is if a POST req
     <li>Matteo learned JavaScript from scratch, to interact with a database from code and to deploy an application, but wanted to learn more about best-practices in development of a web server and to see more examples to get inspired from.<br>
     He also would have liked to learn something more about how to manage session states.</li>
     <li>Francesco learned...</li>
-    <li>Cristina learned...</li>
+    <li>Cristina learned ajax from scratch to interact 
+    She would have liked to learn how to create API from scratch </li>
 </ul>
