--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -55,7 +55,7 @@
 
           <div class="cart" >
 
-            <a id="mimicchio" class="nav-link" href="pages/Cart.html"><i class="flaticon-shopping-cart"></i>
+            <a id="mimicchio" class="nav-link aaa" href="pages/Cart.html"><i class="flaticon-shopping-cart"></i>
             </a> <p>0</p>
           </div>
           
