book semantic links

--- a/FrontEnd/pages/Book.html
+++ b/FrontEnd/pages/Book.html
@@ -119,7 +119,7 @@
                 </div>
                 <div id="bookData" class="col-lg-8 col-md-9 col-sm-12  ">
                     <h4 id="titoloLibro"> </h4>
-                    <h6> <a id="autoreLibro" href="#autoreLibro" >Autore libro</a></h6>
+                    <h6> <a id="autoreLibro"  >Autore libro</a> , Genre: <a id="genB"  >genre</a> ,Theme: <a id="themB"  >theme</a> </h6>
 
                     <div class="rev">
 
