--- a/FrontEnd/pages/themesList.html
+++ b/FrontEnd/pages/themesList.html
@@ -42,7 +42,7 @@
                         <form class="header-search-form form-inline my-2 my-lg-0" action="">
 
                         <input  class="form-control mr-lg-6" type="search" placeholder="Search for books, events and authors">
-                        <button class="btn btn-outline-success my-2 my-sm-0  " type="submit"><i class="flaticon-search"></i></button>
+                        <button class="btn btn-outline-success my-2 my-sm-0  " type="submit">Search<i class="flaticon-search"></i></button>
                         </form>
                         </div>
 
