Added navBar for all pages

--- a/FrontEnd/pages/GenresList.html
+++ b/FrontEnd/pages/GenresList.html
@@ -48,9 +48,10 @@
                         </form>
                         </div>
 
-                    <div >
+                    <div class="row">
 
                         <a class="nav-link aaa " href="Log_In.html"><i class="flaticon-user"></i>Log In</a>
+                        <a class="nav-link aaa " id="logOutLink" href="" onclick="logOut()">Log Out</a>
 
                         <div class="cart" >
 
