--- a/FrontEnd/pages/Author.html
+++ b/FrontEnd/pages/Author.html
@@ -57,9 +57,10 @@
                         </form>
                         </div>
 
-                    <div >
+                    <div class="row">
 
                         <a class="nav-link aaa " href="Log_In.html"><i class="flaticon-user"></i>Log In</a>
+                        <a class="nav-link aaa " id="logOutLink" href="" onclick="logOut()">Log Out</a>
 
                         <div class="cart" >
 
@@ -82,7 +83,7 @@
 
                 <!--div class="container"-->
 
-                
+
                 <div class="navEl">
                     <ul class="navbar-nav mr-auto">
 
