--- a/FrontEnd/pages/Book.html
+++ b/FrontEnd/pages/Book.html
@@ -55,9 +55,10 @@
                         </form>
                     </div>
 
-                    <div >
+                    <div class="row">
 
                         <a class="nav-link aaa " href="Log_In.html"><i class="flaticon-user"></i>Log In</a>
+                        <a class="nav-link aaa " id="logOutLink" href="" onclick="logOut()">Log Out</a>
 
                         <div class="cart" >
 
@@ -79,7 +80,7 @@
 
                 <!--div class="container"-->
 
-                
+
                 <div class="navEl">
                     <ul class="navbar-nav mr-auto">
 
