--- a/FrontEnd/pages/ContactUs.html
+++ b/FrontEnd/pages/ContactUs.html
@@ -37,6 +37,7 @@
 <div class="col-3">
 
   <a class="nav-link " href="Log_In.html"><i class="flaticon-user"></i>Log In</a>
+  <a class="nav-link aaa " href="" onclick="logOut()">Log Out</a>
 
   <div class="cart" >
 
