--- a/FrontEnd/pages/Log_In.html
+++ b/FrontEnd/pages/Log_In.html
@@ -12,7 +12,7 @@
   <script src="../assets/js/main.js"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="pagContainer">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <br><br><br><br><br>
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-  <!--___________END BestSeller, ourFavourite_____________-->
+  
   <!--Footer-->
 
   <footer>
