--- a/FrontEnd/pages/Sign_Up.html
+++ b/FrontEnd/pages/Sign_Up.html
@@ -12,7 +12,7 @@
   <script src="../assets/js/main.js"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="pageContainer">
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <br><br><br><br><br>
@@ -39,7 +39,8 @@
       </div>
     </div>
   </div>
-  <!--___________END BestSeller, ourFavourite_____________-->
+  </div>
+  </div>
   <!--Footer-->
 
   <footer>
