--- a/FrontEnd/pages/main.html
+++ b/FrontEnd/pages/main.html
@@ -29,7 +29,7 @@
 <td>Francesco</td>
 <td>Vaghi</td>
 <td>870168</td>
-<td>non la so</td>
+<td>francesco1.vaghi@mail.polimi.it</td>
 </tr>
 <tr class="odd">
 <td>3</td>
@@ -92,8 +92,8 @@ Obviously, a client can perform only one session per time, that is if a POST req
 <p>Development tasks were divided in this portion:</p>
 <ul>
     <li>Matteo developed the back-end almost the whole time, wrote the OpenAPI Spec and deployed the application on the remote platform</li>
-    <li>Francesco worked on...</li>
-    <li>Cristina worked in the back-end, front-end and design part. She realized the Interactive Dialogue Models, ER model for the Design, created the structure of the of the database for the back-end part, and also worked on the front-end realizing part of the pages and functions of the wbsite.</li>
+    <li>Francesco worked in front-end part. He  worked on the front-end realizing part of the pages and jquery-ajax functions of the website</li>
+    <li>Cristina worked in the back-end, front-end and design part. She realized the Interactive Dialogue Models, ER model for the Design, created the structure of the of the database for the back-end part, and also worked on the front-end realizing part of the pages and functions of the website.</li>
 </ul>
 <p>All the members of the team worked on the specification of the OpenAPI giving support and ideas for the implementation</p>
 <h3 id="analysis-of-existing-api">Analysis of existing API</h3>
@@ -102,7 +102,8 @@ Obviously, a client can perform only one session per time, that is if a POST req
 <ul>
     <li>Matteo learned JavaScript from scratch, to interact with a database from code and to deploy an application, but wanted to learn more about best-practices in development of a web server and to see more examples to get inspired from.<br>
     He also would have liked to learn something more about how to manage session states.</li>
-    <li>Francesco learned...</li>
-    <li>Cristina learned ajax from scratch to interact 
+    <li>Francesco learned HTML, CSS and bootstrap from scratch to realize the pages, but wanted to learn more about best-practices in development of a webpage, he also learned JavaScript, jQuery and AJAX from scratch to realize the function for dinamic pages of the website.<br>
+    He also would have learned more about API and the interaction with the back-end element.</li>
+    <li>Cristina learned ajax from scratch to interact.<br>
     She would have liked to learn how to create API from scratch </li>
 </ul>
