--- a/FrontEnd/pages/Author.html
+++ b/FrontEnd/pages/Author.html
@@ -112,7 +112,7 @@
         <br>
         <!--end navbar-->
 
-        <div class="breads">
+        <div id="breads" class="breads">
             <a class="rootB" href="AuthorsList.html"><b>Authors </b></a>/
 
         </div>
