--- a/FrontEnd/pages/main.html
+++ b/FrontEnd/pages/main.html
@@ -104,6 +104,6 @@ Obviously, a client can perform only one session per time, that is if a POST req
     He also would have liked to learn something more about how to manage session states.</li>
     <li>Francesco learned HTML, CSS and bootstrap from scratch to realize the pages, but wanted to learn more about best-practices in development of a webpage, he also learned JavaScript, jQuery and AJAX from scratch to realize the function for dinamic pages of the website.<br>
     He also would have learned more about API and the interaction with the back-end element.</li>
-    <li>Cristina learned ajax from scratch to interact.<br>
-    She would have liked to learn how to create API from scratch </li>
+    <li>Cristina learned ajax from scratch and has deepened the knowledge of JavaScript, jQuery, and bootstrap, but wanted to learn more about best-practices in development of a webpage <br>
+    She would have liked to learn how to create API from scratch and the interaction between the back-end elements and front-end </li>
 </ul>
