Fix links to ContactUs page

--- a/FrontEnd/pages/BooksList.html
+++ b/FrontEnd/pages/BooksList.html
@@ -187,8 +187,8 @@
         <!--Footer-->
 
         <footer>
-          <a href="pages/ContactUs.html">Contact Us</a>
-          <a href="pages/ContactUs.html">Shipping Info</a>
+          <a href="ContactUs.html">Contact Us</a>
+          <a href="ContactUs.html">Shipping Info</a>
           <a href="">Cookies</a>
           <a href="">Privacy</a>
         </footer>
