--- a/FrontEnd/pages/EventsList.html
+++ b/FrontEnd/pages/EventsList.html
@@ -82,7 +82,7 @@
                             <div class="dropdown-menu" aria-labelledby="dropdown03">
                                 <a class="dropdown-item" href="BooksList.html?type=all&name=all">All books</a>
                                 <a class="dropdown-item" href="themesList.html">Themes</a>
-                                <a class="dropdown-item" href="GenreList.html">Genres</a>
+                                <a class="dropdown-item" href="GenresList.html">Genres</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -146,8 +146,8 @@
         <!--Footer-->
 
         <footer>
-          <a href="pages/ContactUs.html">Contact Us</a>
-          <a href="pages/ContactUs.html">Shipping Info</a>
+          <a href="ContactUs.html">Contact Us</a>
+          <a href="ContactUs.html">Shipping Info</a>
           <a href="">Cookies</a>
           <a href="">Privacy</a>
         </footer>
