--- a/FrontEnd/pages/Author.html
+++ b/FrontEnd/pages/Author.html
@@ -137,13 +137,9 @@
             </div>
 
 
-            <div class="section col-12" >
-                <h4> Main Works</h4>
-                <div class="inlineBooks">
-                <a href><img  src="../assets/img/grigia" alt=""></a>
-                <a href><img  src="../assets/img/hp_chamber.jpg" alt=""></a>
+            <h4> Main Works</h4>
+            <div id="authorMainWork" class="section col-12 row" >
 
-                </div>
 
             </div>
 
@@ -155,7 +151,6 @@
 
 
 
-        <!--___________END BestSeller, ourFavourite_____________-->
         <!--Footer-->
 
         <footer>
