--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
   <script src="assets/js/main.js"></script>
 </head>
 
-<body>
+<body onload="homeFunctions()">
 
 
   <!--mia upper navbar-->
@@ -28,7 +28,7 @@
     <nav class=" upper navbar navbar-expand-lg navbar-light bg-light">
       <!--div class="container"-->
 
-      <div class="col-lg-3 col-md-5 col-sm-4"><h2>Titolo e Logo del  sito</h2></div>
+      <div class="col-lg-3 col-md-5 col-sm-4"><h2>Mimmo's Bookstore</h2></div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
