--- a/FrontEnd/pages/Cart.html
+++ b/FrontEnd/pages/Cart.html
@@ -29,7 +29,7 @@
     <div class="upper-nav navbar">
       <!--div class="container"-->
 
-      <div class="col-3"><a href="../index.html"><h2>Titolo e Logo del  sito</h2></a></div>
+      <div class="col-3"><a href="../index.html"><h2>Mimmo's Bookstore</h2></a></div>
       <div class="col-6"><form class="header-search-form" action="">
 
 
@@ -114,7 +114,7 @@
 <div class="breads">
   <a href=""><b>Cart </b></a>
 </div>
-<div class="container">
+<div class="pageContainer">
 
   <div id="cartTitle">
 
