--- a/FrontEnd/pages/ContactUs.html
+++ b/FrontEnd/pages/ContactUs.html
@@ -27,7 +27,7 @@
     <div class="upper-nav navbar">
       <!--div class="container"-->
 
-      <div class="col-3"><a href="../index.html"><h2>Titolo e Logo del  sito</h2></a></div>
+      <div class="col-3"><a href="../index.html"><h2>Mimmo's Bookstore</h2></a></div>
       <div class="col-6"><form class="header-search-form" action="">
 
 <input  type="text" placeholder="Search for books, events and authors">
