--- a/FrontEnd/pages/Log_In.html
+++ b/FrontEnd/pages/Log_In.html
@@ -33,7 +33,7 @@
       <nav class=" upper navbar navbar-expand-lg navbar-light bg-light">
           <!--div class="container"-->
 
-          <div class="col-lg-3 col-md-5 col-sm-4"><a href="../index.html"><h2>Titolo e Logo del  sito</h2></a></div>
+          <div class="col-lg-3 col-md-5 col-sm-4"><a href="../index.html"><h2>Mimmo's Bookstore</h2></a></div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
