--- a/FrontEnd/pages/Author.html
+++ b/FrontEnd/pages/Author.html
@@ -137,8 +137,12 @@
             </div>
 
 
+            
+            <div  class="section col-12" >
             <h4> Main Works</h4>
-            <div id="authorMainWork" class="section col-12 row" >
+            <div id="authorMainWork" class="inlineBooks" > 
+                
+            </div>
 
 
             </div>
