--- a/FrontEnd/pages/Cart.html
+++ b/FrontEnd/pages/Cart.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body>
+<body onload="getCart()">
   <!--upper navbar-->
   <div class="container-fluid ">
     <div class="upper-nav navbar">
